# assembly-ai-hs

./: LICENSE  README.md  assembly-ai.cabal
app/: Main.hs
src/: AssemblyAI.hs
src/AssemblyAI/: API.hs  Client.hs  Types.hs
