cabal-version:      3.0
name:               assembly-ai
version:            0.1.0.0
synopsis:           Haskell client library for the AssemblyAI API
description:        A Haskell library using Servant to interact with the AssemblyAI REST API for transcription services
homepage:           https://github.com/iconnect/assembly-ai-hs
license:            BSD-3-Clause
license-file:       LICENSE
author:             AssemblyAI Haskell Team
maintainer:         maintainer@example.com
category:           Web
build-type:         Simple
extra-doc-files:    README.md

source-repository head
  type:     git
  location: https://github.com/iconnect/assembly-ai-hs

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AssemblyAI
                    , AssemblyAI.API
                    , AssemblyAI.Client
                    , AssemblyAI.Types
    build-depends:    base >=4.17 && <5
                    , aeson >=2.0 && <2.3
                    , text >=1.2 && <2.2
                    , servant >=0.19 && <0.21
                    , servant-client >=0.19 && <0.21
                    , servant-client-core >=0.19 && <0.21
                    , http-client >=0.7 && <0.8
                    , http-client-tls >=0.3 && <0.4
                    , http-api-data >=0.4 && <0.7
                    , bytestring >=0.11 && <0.13
    hs-source-dirs:   src
    default-language: Haskell2010

executable assembly-ai-example
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >=4.17 && <5
                    , assembly-ai
                    , text >=1.2 && <2.2
    hs-source-dirs:   app
    default-language: Haskell2010
